# example-apache-arrow-pybind11-cmake

./: CMakeLists.txt  README.md  environment.yml  setup.py
.github/workflows/: ci.yml
src/: example.cpp
tests/: test_arrow_pybind_example.py
